force-app/main/default/objects/property__c/property__c.object-meta.xml
<CustomObject>
    <label>property</label>
    <nameField>
        <label>property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>property</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>