force-app/main/default/objects/property__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>